Refactor ItemsPage to replace pagination with react-window for improved performance and remove unused variables

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-window": "^1.8.11",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
@@ -26,6 +27,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-window": "^1.8.8",
     "aws-cdk": "^2",
     "aws-cdk-lib": "^2",
     "constructs": "^10.3.0",
