Transactional Purchase Record

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "sandbox": "npx ampx sandbox"
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.5.5",
